--- a/index.html
+++ b/index.html
@@ -3,10 +3,75 @@
 <head>
   <meta charset="utf-8">
   <title>Titre de la page</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/140244ef63.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-Hello World!
+<div class="page">
+	<div class="page_gauche">
+		<!-- PROFILE -->
+	    <div class="profile">
+		     <div class="profile_photo"><img src="images/profile-picture.png"/></div>
+		     <div class="profile_name">Martins Mathieu</div>
+		     <div class="profile_statue">Collegien au College Jules Ferry d'Ermont</div>
+	    </div>
+        <!-- INFO -->
+	    <div class="info">
+	    	<div class="info_item">
+	    		<h2 class="info_item_title"><i class="fad fa-user-tie"></i> A propos de moi</h2>
+	    		<div class="info_item_content">contenue</div>
+	    	</div>
+            <div class="info_item">
+	    		<h2 class="info_item_title"><i class="fad fa-phone-square-alt"></i> Contatez moi</h2>
+	    		<div class="info_item_content">
+	    			<ul class="list list-contact">
+	    			<li><i class="fal fa-envelope"></i> martins.mathieu.assis@gmail.com</li>
+	    			<li><i class="fas fa-phone-alt"></i> 07 85 54 31 11</li>
+	    		    </ul>
+	    		</div>
+	    	</div>
+	    	<div class="info_item">
+	    		<h2 class="info_item_title"><i class="fad fa-globe-europe"></i></i> Langue</h2>
+	    		<div class="info_item_content">
+	    		<ul class="list list-flag">
+	    			<li><img src="images/flag/fr.svg"/> Français(langue natal)</li>
+	    		    <li><img src="images/flag/en.svg"/> Anglais(moyen)</li>
+                    <li><img src="images/flag/pt.svg"/> Portugal(Débutant)</li>
+                    <li><img src="images/flag/es.svg"/> Espagnol(Débutant)</li>
+                </ul>
+	    	   </div>
+	    	</div>
+	    </div>
+	</div><!--
+	--><div class="page_droite">
+		<!-- Expérience -->
+		   <div class="more">
+		   	   <div class="more_item">
+		   	   	   <h2 class="more_item_title"><i class="fad fa-suitcase"></i> Expérience</h2>
+                   <div class="more_item_content"> 
+                   <ul class="list list-expérience">
+                   	   <li>
+                   	   	<h3 class="list_title">Stage de 3eme</h3>
+                        <div class="list_content">Stage de 3eme chez RemplaFrance</div>                        	
+                   	   </li>
+                   </ul>
+                   </div>
+                </div>
+		   	   <div class="more_item">
+		   	   	   <div class="more_item_title"><i class="fad fa-graduation-cap"></i> Etude</div>
+                   <div class="more_item_content">
+                   <ul classe="list list-etude">
+                   	   <li>
+                   	   <h3 class="list_title">Collège Jules Ferry d'Ermont</h3>
+                   	   </li>
+                   </ul>
+                   </div>
+		   	   </div>
+		   </div>
+	   </div>
+</div>
 </body>
 </html>
