--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 	    <div class="info">
 	    	<div class="info_item">
 	    		<h2 class="info_item_title"><i class="fad fa-user-tie"></i> A propos de moi</h2>
-	    		<div class="info_item_content">contenue</div>
+	    		<div class="info_item_content">
+	    			Je m'appele Mathieu Martins, je suis un étudiant motivé de 14ans.<br>
+	    			Je possède des bases en HTML et CSS (language de programmation web).
+
+	    		</div>
 	    	</div>
             <div class="info_item">
 	    		<h2 class="info_item_title"><i class="fad fa-phone-square-alt"></i> Contatez moi</h2>
@@ -34,15 +38,6 @@
 	    		</div>
 	    	</div>
 	    	<div class="info_item">
-	    		<h2 class="info_item_title"><i class="fad fa-globe-europe"></i></i> Langue</h2>
-	    		<div class="info_item_content">
-	    		<ul class="list list-flag">
-	    			<li><img src="images/flag/fr.svg"/> Français(langue natal)</li>
-	    		    <li><img src="images/flag/en.svg"/> Anglais(moyen)</li>
-                    <li><img src="images/flag/pt.svg"/> Portugal(Débutant)</li>
-                    <li><img src="images/flag/es.svg"/> Espagnol(Débutant)</li>
-                </ul>
-	    	   </div>
 	    	</div>
 	    </div>
 	</div><!--
@@ -55,7 +50,7 @@
                    <ul class="list list-expérience">
                    	   <li>
                    	   	<h3 class="list_title">Stage de 3eme</h3>
-                        <div class="list_content">Stage de 3eme chez RemplaFrance</div>                        	
+                        <div class="list_content">Stage de 3eme chez RemplaFrance</div>                       	
                    	   </li>
                    </ul>
                    </div>
@@ -69,9 +64,18 @@
                    	   </li>
                    </ul>
                    </div>
+                   	<h2 class="more_item_title"><i class="fad fa-globe-europe"></i></i> Langue</h2>
+	    		<div class="more_item_content">
+	            <ul class="list list-flag">
+	    			<li><img src="images/flag/fr.svg"/> Français (langue natal)</li>
+	    		    <li><img src="images/flag/en.svg"/> Anglais (moyen)</li>
+                    <li><img src="images/flag/pt.svg"/> Portugal (Débutant)</li>
+                    <li><img src="images/flag/es.svg"/> Espagnol (Débutant)</li>
+                </ul>
+	    	   </div>
 		   	   </div>
 		   </div>
-	   </div>
+	</div>
 </div>
 </body>
 </html>
