--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>Cv de Mathieu</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" media="screen" href="screen.css" type="text/css" />
@@ -15,28 +15,32 @@
 <body>
 <div class="page">
 	<div class="page_gauche">
+
 		<!-- PROFILE -->
 	    <div class="profile">
-		     <div class="profile_photo"><img src="images/profile-picture.png"/></div>
+		     <div class="profile_photo"><img src="images/profile-picture.png"/> </div>
 		     <div class="profile_name">Martins Mathieu</div>
-		     <div class="profile_statue">Collegien au College Jules Ferry d'Ermont</div>
+		     <div class="profile_statue">Collégien au Collège Jules Ferry d'Ermont</div>
 	    </div>
+
         <!-- INFO -->
 	    <div class="info">
 	    	<div class="info_item">
-	    		<h2 class="info_item_title"><i class="fad fa-user-tie"></i> A propos de moi</h2>
+	    		<h2 class="info_item_title"> <i class="fad fa-user-tie"> </i> A propos de moi</h2>
 	    		<div class="info_item_content">
-	    			Je m'appele Mathieu Martins, je suis un étudiant motivé de 14ans.<br>
+	    			Je m'appelle Mathieu Martins, je suis un étudiant motivé de 14ans.<br>
 	    			Je possède des bases en HTML et CSS (language de programmation web).
-
 	    		</div>
 	    	</div>
             <div class="info_item">
-	    		<h2 class="info_item_title"><i class="fad fa-phone-square-alt"></i> Contatez moi</h2>
+	    		<h2 class="info_item_title"> <i class="fad fa-phone-square-alt"> </i> Contactez moi</h2>
 	    		<div class="info_item_content">
-	    			<ul class="list list-contact">
-	    			<li><i class="fal fa-envelope"></i> martins.mathieu.assis@gmail.com</li>
-	    			<li><i class="fas fa-phone-alt"></i> 07 85 54 31 11</li>
+		    	    <ul class="list list-contact">
+	    			<li class="link-contact"> <a href="mailto:martins.mathieu.assis@gmail.com">  </li>
+	    			<i class="fad fa-envelope"> </i>
+	    			 martins.mathieu.assis@gmail.com 
+	    			</a>
+	    			<li> <i class="fas fa-phone-alt"></i> 07 85 54 31 11</li>
 	    		    </ul>
 	    		</div>
 	    	</div>
@@ -44,11 +48,12 @@
 	    	</div>
 	    </div>
 	</div><!--
-	--><div class="page_droite">
+--><div class="page_droite">
+
 		<!-- Expérience -->
 		   <div class="more">
 		   	   <div class="more_item">
-		   	   	   <h2 class="more_item_title"><i class="fad fa-suitcase"></i> Expérience</h2>
+		   	   	   <h2 class="more_item_title"> <i class="fad fa-suitcase"> </i> Expérience</h2>
                    <div class="more_item_content"> 
                    <ul class="list list-expérience">
                    	   <li>
@@ -59,7 +64,7 @@
                    </div>
                 </div>
 		   	   <div class="more_item">
-		   	   	   <div class="more_item_title"><i class="fad fa-graduation-cap"></i> Etude</div>
+		   	   	   <div class="more_item_title"> <i class="fad fa-graduation-cap"> </i> Etude</div>
                    <div class="more_item_content">
                    <ul classe="list list-etude">
                    	   <li>
@@ -67,12 +72,12 @@
                    	   </li>
                    </ul>
                    </div>
-                   	<h2 class="more_item_title"><i class="fad fa-globe-europe"></i></i> Langue</h2>
+                   	<h2 class="more_item_title"> <i class="fad fa-globe-europe"> </i> Langue</h2>
 	    		<div class="more_item_content">
 	            <ul class="list list-flag">
-	    			<li><img src="images/flag/fr.svg"/> Français (langue natal)</li>
-	    		    <li><img src="images/flag/en.svg"/> Anglais (moyen)</li>
-                    <li><img src="images/flag/pt.svg"/> Portugal (Débutant)</li>
+	    			<li> <img src="images/flag/fr.svg"/> Français (langue natale)</li>
+	    		    <li> <img src="images/flag/en.svg"/> Anglais (moyen)</li>
+                    <li> <img src="images/flag/pt.svg"/> Portugais (Débutant)</li>
                     <li><img src="images/flag/es.svg"/> Espagnol (Débutant)</li>
                 </ul>
 	    	   </div>
